--- a/templates/lender/dashboard.html
+++ b/templates/lender/dashboard.html
@@ -1,3 +1,10 @@
+{% extends "base.html" %}
+{% block content %}
+<h1>Lender Dashboard</h1>
+<p>Your lender tools will appear here.</p>
+{% endblock %}
+
+
 {% extends "lender/layout.html" %}
 
 {% block lender_content %}
